--- a/tools/package.json
+++ b/tools/package.json
@@ -1,13 +1,11 @@
 {
   "scripts": {
-    "generate": "ts-node src/index"
+    "generate": "bun run src/index.ts"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.14",
     "dotenv": "^16.1.4",
     "notion-to-md": "^3.1.1"
   },
-  "devDependencies": {
-    "ts-node": "^10.9.1"
-  }
+  "devDependencies": {}
 }
