--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
     - cron: '0 0 * * *'
 
 jobs:
-  export-markdown:
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
