--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,10 @@ jobs:
           bun run generate
         working-directory: ./tools
 
+      - name: Build
+        run: bun run build
+        working-directory: .
+
       - name: Publish to Cloudflare Pages
         uses: cloudflare/pages-action@v1
         with:
