--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,8 @@ jobs:
         env:
           NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
           NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
+          IMAGE_WORKER_AUTH_TOKEN: ${{ secrets.IMAGE_WORKER_AUTH_TOKEN }}
+          IMAGE_WORKER_BASE_URL: ${{ secrets.IMAGE_WORKER_BASE_URL }}
         run: |
           bun i
           bun run generate
