--- a/tools/notion-content/package.json
+++ b/tools/notion-content/package.json
@@ -4,7 +4,8 @@
   },
   "dependencies": {
     "@notionhq/client": "^2.2.14",
-    "notion-to-md": "^3.1.1"
+    "notion-to-md": "^3.1.1",
+    "puppeteer": "^23.0.2"
   },
   "devDependencies": {}
 }
