--- a/tools/r2-image-worker/tsconfig.json
+++ b/tools/r2-image-worker/tsconfig.json
@@ -6,11 +6,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "strict": true,
-    "lib": [
-      "esnext"
-    ],
-    "types": [
-      "@cloudflare/workers-types",
-    ],
-  },
+    "lib": ["esnext"],
+    "types": ["@cloudflare/workers-types"]
+  }
 }
