--- a/tools/r2-image-worker/wrangler.toml
+++ b/tools/r2-image-worker/wrangler.toml
@@ -5,5 +5,5 @@ compatibility_date = "2022-05-12"
 
 [[r2_buckets]]
 binding = 'BUCKET'
-bucket_name = 'images'
-preview_bucket_name = 'images'
+bucket_name = 'kosukesaigusa'
+preview_bucket_name = 'kosukesaigusa'
