--- a/package.json
+++ b/package.json
@@ -4,27 +4,31 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "wrangler pages dev dist",
-    "deploy": "$npm_execpath run build && wrangler pages deploy dist"
+    "deploy": "$npm_execpath run build && wrangler pages deploy dist",
+    "check": "biome check .",
+    "fix": "biome check --write .",
+    "fix:unsafe": "biome check --write --unsafe ."
   },
   "dependencies": {
-    "hono": "^4.1.3"
+    "hono": "^4.11.7"
   },
   "devDependencies": {
-    "@hono/vite-dev-server": "^0.3.4",
-    "@hono/vite-ssg": "^0.1.0",
+    "@biomejs/biome": "^2.3.13",
+    "@hono/vite-dev-server": "^0.24.1",
+    "@hono/vite-ssg": "^0.3.3",
     "@types/rss": "^0.0.32",
-    "rehype-stringify": "^10.0.0",
+    "rehype-stringify": "^10.0.1",
     "remark": "^15.0.1",
-    "remark-expressive-code": "^0.33.5",
+    "remark-expressive-code": "^0.41.6",
     "remark-extract-frontmatter": "^3.2.0",
     "remark-frontmatter": "^5.0.0",
-    "remark-gfm": "^4.0.0",
+    "remark-gfm": "^4.0.1",
     "remark-parse": "^11.0.0",
-    "remark-rehype": "^11.1.0",
+    "remark-rehype": "^11.1.2",
     "rss": "^1.2.2",
-    "vite": "^5.2.3",
-    "vite-plugin-sitemap": "^0.5.3",
-    "wrangler": "^3.37.0",
-    "yaml": "^2.4.1"
+    "vite": "^7.3.1",
+    "vite-plugin-sitemap": "^0.8.2",
+    "wrangler": "^4.61.1",
+    "yaml": "^2.8.2"
   }
 }
